// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test on faceting > Admin key: Get default faceting object 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Admin key: Reset faceting 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Admin key: Update faceting at null 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Admin key: Update faceting settings 1`] = `
{
  "maxValuesPerFacet": 12,
  "sortFacetValuesBy": {
    "*": "alpha",
    "test": "count",
  },
}
`;

exports[`Test on faceting > Master key: Get default faceting object 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Master key: Reset faceting 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Master key: Update faceting at null 1`] = `
{
  "maxValuesPerFacet": 100,
  "sortFacetValuesBy": {
    "*": "alpha",
  },
}
`;

exports[`Test on faceting > Master key: Update faceting settings 1`] = `
{
  "maxValuesPerFacet": 12,
  "sortFacetValuesBy": {
    "*": "alpha",
    "test": "count",
  },
}
`;
